# open-canon-files

./: LICENSE  README.md  pyproject.toml
open_canon_schema/: model_definitions.py
