# Guide (user-friendly):
# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

# Specification (technical, formal):
# https://packaging.python.org/en/latest/specifications/pyproject-toml/


# Choosing a build backend:
# https://packaging.python.org/en/latest/tutorials/packaging-projects/#choosing-a-build-backend
[build-system]
# A list of packages that are needed to build your package:
requires = ["setuptools"] # REQUIRED if [build-system] table is used
# The name of the Python object that frontends will use to perform the build:
build-backend = "setuptools.build_meta" # If not defined, then legacy behavior can happen.


[project]
name = "open_canon_schema" # REQUIRED, is the only field that cannot be marked as dynamic.
description = "Format definition and parser for files in the OpenCanon project."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE.txt" }
keywords = []
authors = [{ name = "Andrew P. Sansom", email = "andrew@euleriancircuit.com" }]
maintainers = [{ name = "Andrew P. Sansom", email = "andrew@euleriancircuit.com" }]
dynamic = ["version"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Religion",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = ["pydantic==2.10.2"]


[project.optional-dependencies]
dev = ["ruff==0.8.0"]
test = ["pytest==8.3.3"]

[project.urls]
"Homepage" = "https://github.com/open-canon/open-canon-schema"
"Bug Reports" = "https://github.com/open-canon/open-canon-schema/issues"

[tool.setuptools.dynamic]
version = { attr = "open_canon_schema.__version__" }
